// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`code-converters > getZodObjectFromApi > Edge Cases > _로 시작하는 optional 파라미터 > parameters 반영 확인 1`] = `"{"success":true,"data":{}}"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > _로 시작하는 optional 파라미터 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Context, RefKnex 파라미터 > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Context, RefKnex 파라미터 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Date 타입 처리 > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Date 타입 처리 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Date 타입 처리 > 정의한 파라미터 타입 체크 1`] = `"date"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Omit 파라미터 > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Omit 파라미터 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Omit 파라미터 > 정의한 파라미터 타입 체크 1`] = `"object"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Partial 파라미터 > parameters 반영 확인 1`] = `"{"success":true,"data":{}}"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Partial 파라미터 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Partial 파라미터 > 정의한 파라미터 타입 체크 1`] = `"optional"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Pick 파라미터 > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Pick 파라미터 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > Pick 파라미터 > 정의한 파라미터 타입 체크 1`] = `"object"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > nullable union 타입 (Type | null) 처리 > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > nullable union 타입 (Type | null) 처리 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > nullable union 타입 (Type | null) 처리 > 정의한 파라미터 타입 체크 1`] = `"union"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > 중첩된 Pick/Omit 처리 > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > 중첩된 Pick/Omit 처리 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > 중첩된 Pick/Omit 처리 > 중첩된 Pick/Omit 결과 1`] = `
ZodObject {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "catchall": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "checks": [],
    "shape": {
      "id": ZodNumber {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "checks": [],
          "type": "number",
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "finite": [Function],
        "format": null,
        "gt": [Function],
        "gte": [Function],
        "int": [Function],
        "isFinite": true,
        "isInt": false,
        "isNullable": [Function],
        "isOptional": [Function],
        "lt": [Function],
        "lte": [Function],
        "max": [Function],
        "maxValue": Infinity,
        "meta": [Function],
        "min": [Function],
        "minValue": -Infinity,
        "multipleOf": [Function],
        "negative": [Function],
        "nonnegative": [Function],
        "nonoptional": [Function],
        "nonpositive": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "positive": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safe": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "number",
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "name": ZodString {
        "and": [Function],
        "array": [Function],
        "base64": [Function],
        "base64url": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "cidrv4": [Function],
        "cidrv6": [Function],
        "clone": [Function],
        "cuid": [Function],
        "cuid2": [Function],
        "date": [Function],
        "datetime": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "string",
        },
        "default": [Function],
        "describe": [Function],
        "duration": [Function],
        "e164": [Function],
        "email": [Function],
        "emoji": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "endsWith": [Function],
        "format": null,
        "guid": [Function],
        "includes": [Function],
        "ipv4": [Function],
        "ipv6": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "jwt": [Function],
        "ksuid": [Function],
        "length": [Function],
        "lowercase": [Function],
        "max": [Function],
        "maxLength": null,
        "meta": [Function],
        "min": [Function],
        "minLength": null,
        "nanoid": [Function],
        "nonempty": [Function],
        "nonoptional": [Function],
        "normalize": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "regex": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "startsWith": [Function],
        "superRefine": [Function],
        "time": [Function],
        "toLowerCase": [Function],
        "toUpperCase": [Function],
        "transform": [Function],
        "trim": [Function],
        "type": "string",
        "ulid": [Function],
        "uppercase": [Function],
        "url": [Function],
        "uuid": [Function],
        "uuidv4": [Function],
        "uuidv6": [Function],
        "uuidv7": [Function],
        "xid": [Function],
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    },
    "type": "object",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "extend": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "keyof": [Function],
  "loose": [Function],
  "merge": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "omit": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "partial": [Function],
  "passthrough": [Function],
  "pick": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "required": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeExtend": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "strict": [Function],
  "strip": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "object",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > 파라미터가 없는 API > parameters 반영 확인 1`] = `"{"success":true,"data":{}}"`;

exports[`code-converters > getZodObjectFromApi > Edge Cases > 파라미터가 없는 API > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Intersection > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Intersection > typeParameters 반영 확인(2) 1`] = `
[
  undefined,
]
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Intersection > 정의한 파라미터 반영 확인 1`] = `
ZodIntersection {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "left": ZodLiteral {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "clone": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "literal",
        "values": [
          "a",
        ],
      },
      "default": [Function],
      "describe": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "type": "literal",
      "values": Set {
        "a",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "right": ZodLiteral {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "clone": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "literal",
        "values": [
          "b",
        ],
      },
      "default": [Function],
      "describe": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "type": "literal",
      "values": Set {
        "b",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "intersection",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "intersection",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Intersection > 타입 파라미터 타입 체크 1`] = `"intersection"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Number > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Number > parameters 반영 확인 2`] = `
ZodNumber {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "checks": [],
    "type": "number",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "finite": [Function],
  "format": null,
  "gt": [Function],
  "gte": [Function],
  "int": [Function],
  "isFinite": true,
  "isInt": false,
  "isNullable": [Function],
  "isOptional": [Function],
  "lt": [Function],
  "lte": [Function],
  "max": [Function],
  "maxValue": Infinity,
  "meta": [Function],
  "min": [Function],
  "minValue": -Infinity,
  "multipleOf": [Function],
  "negative": [Function],
  "nonnegative": [Function],
  "nonoptional": [Function],
  "nonpositive": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "positive": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "safe": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "step": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "number",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Number > typeParameters 반영 확인 1`] = `
[
  "T",
]
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Number > 타입파라미터 타입 체크 1`] = `"number"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Number의 배열, String의 배열 > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Number의 배열, String의 배열 > typeParameters 반영 확인 1`] = `
[
  "T",
  "U",
]
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Number의 배열, String의 배열 > 정의한 파라미터1 반영 확인 1`] = `
ZodArray {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "element": ZodString {
      "and": [Function],
      "array": [Function],
      "base64": [Function],
      "base64url": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "cidrv4": [Function],
      "cidrv6": [Function],
      "clone": [Function],
      "cuid": [Function],
      "cuid2": [Function],
      "date": [Function],
      "datetime": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "string",
      },
      "default": [Function],
      "describe": [Function],
      "duration": [Function],
      "e164": [Function],
      "email": [Function],
      "emoji": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "endsWith": [Function],
      "format": null,
      "guid": [Function],
      "includes": [Function],
      "ipv4": [Function],
      "ipv6": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "jwt": [Function],
      "ksuid": [Function],
      "length": [Function],
      "lowercase": [Function],
      "max": [Function],
      "maxLength": null,
      "meta": [Function],
      "min": [Function],
      "minLength": null,
      "nanoid": [Function],
      "nonempty": [Function],
      "nonoptional": [Function],
      "normalize": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "regex": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "startsWith": [Function],
      "superRefine": [Function],
      "time": [Function],
      "toLowerCase": [Function],
      "toUpperCase": [Function],
      "transform": [Function],
      "trim": [Function],
      "type": "string",
      "ulid": [Function],
      "uppercase": [Function],
      "url": [Function],
      "uuid": [Function],
      "uuidv4": [Function],
      "uuidv6": [Function],
      "uuidv7": [Function],
      "xid": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "array",
  },
  "default": [Function],
  "describe": [Function],
  "element": ZodString {
    "and": [Function],
    "array": [Function],
    "base64": [Function],
    "base64url": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "clone": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "default": [Function],
    "describe": [Function],
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "endsWith": [Function],
    "format": null,
    "guid": [Function],
    "includes": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "length": [Function],
    "lowercase": [Function],
    "max": [Function],
    "maxLength": null,
    "meta": [Function],
    "min": [Function],
    "minLength": null,
    "nanoid": [Function],
    "nonempty": [Function],
    "nonoptional": [Function],
    "normalize": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "regex": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "startsWith": [Function],
    "superRefine": [Function],
    "time": [Function],
    "toLowerCase": [Function],
    "toUpperCase": [Function],
    "transform": [Function],
    "trim": [Function],
    "type": "string",
    "ulid": [Function],
    "uppercase": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "xid": [Function],
    "~standard": {
      "validate": [Function],
      "vendor": "zod",
      "version": 1,
    },
  },
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "length": [Function],
  "max": [Function],
  "meta": [Function],
  "min": [Function],
  "nonempty": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "array",
  "unwrap": [Function],
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Number의 배열, String의 배열 > 정의한 파라미터2 반영 확인 1`] = `
ZodOptional {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "innerType": ZodArray {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "clone": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "element": ZodNumber {
          "and": [Function],
          "array": [Function],
          "brand": [Function],
          "catch": [Function],
          "check": [Function],
          "clone": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "checks": [],
            "type": "number",
          },
          "default": [Function],
          "describe": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "finite": [Function],
          "format": null,
          "gt": [Function],
          "gte": [Function],
          "int": [Function],
          "isFinite": true,
          "isInt": false,
          "isNullable": [Function],
          "isOptional": [Function],
          "lt": [Function],
          "lte": [Function],
          "max": [Function],
          "maxValue": Infinity,
          "meta": [Function],
          "min": [Function],
          "minValue": -Infinity,
          "multipleOf": [Function],
          "negative": [Function],
          "nonnegative": [Function],
          "nonoptional": [Function],
          "nonpositive": [Function],
          "nullable": [Function],
          "nullish": [Function],
          "optional": [Function],
          "or": [Function],
          "overwrite": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "pipe": [Function],
          "positive": [Function],
          "prefault": [Function],
          "readonly": [Function],
          "refine": [Function],
          "register": [Function],
          "safe": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "spa": [Function],
          "step": [Function],
          "superRefine": [Function],
          "transform": [Function],
          "type": "number",
          "~standard": {
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        "type": "array",
      },
      "default": [Function],
      "describe": [Function],
      "element": ZodNumber {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "checks": [],
          "type": "number",
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "finite": [Function],
        "format": null,
        "gt": [Function],
        "gte": [Function],
        "int": [Function],
        "isFinite": true,
        "isInt": false,
        "isNullable": [Function],
        "isOptional": [Function],
        "lt": [Function],
        "lte": [Function],
        "max": [Function],
        "maxValue": Infinity,
        "meta": [Function],
        "min": [Function],
        "minValue": -Infinity,
        "multipleOf": [Function],
        "negative": [Function],
        "nonnegative": [Function],
        "nonoptional": [Function],
        "nonpositive": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "positive": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safe": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "number",
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "encode": [Function],
      "encodeAsync": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "length": [Function],
      "max": [Function],
      "meta": [Function],
      "min": [Function],
      "nonempty": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "type": "array",
      "unwrap": [Function],
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "optional",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "optional",
  "unwrap": [Function],
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Number의 배열, String의 배열 > 타입파라미터 타입 체크 1`] = `"array"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Object > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Object > typeParameters 반영 확인 1`] = `
[
  "T",
]
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Object > 정의한 파라미터 반영 확인 1`] = `
ZodObject {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "catchall": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "shape": {
      "id": ZodNumber {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "checks": [],
          "type": "number",
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "finite": [Function],
        "format": null,
        "gt": [Function],
        "gte": [Function],
        "int": [Function],
        "isFinite": true,
        "isInt": false,
        "isNullable": [Function],
        "isOptional": [Function],
        "lt": [Function],
        "lte": [Function],
        "max": [Function],
        "maxValue": Infinity,
        "meta": [Function],
        "min": [Function],
        "minValue": -Infinity,
        "multipleOf": [Function],
        "negative": [Function],
        "nonnegative": [Function],
        "nonoptional": [Function],
        "nonpositive": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "positive": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safe": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "number",
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    },
    "type": "object",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "extend": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "keyof": [Function],
  "loose": [Function],
  "merge": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "omit": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "partial": [Function],
  "passthrough": [Function],
  "pick": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "required": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeExtend": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "strict": [Function],
  "strip": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "object",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Object > 타입파라미터 타입 체크 1`] = `"object"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Tuple > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Tuple > typeParameters 반영 확인 1`] = `
[
  "T",
]
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Tuple > 정의한 파라미터 반영 확인 1`] = `
ZodTuple {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "items": [
      ZodLiteral {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "literal",
          "values": [
            "string",
          ],
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "literal",
        "values": Set {
          "string",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      ZodLiteral {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "literal",
          "values": [
            1,
          ],
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "literal",
        "values": Set {
          1,
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    ],
    "rest": null,
    "type": "tuple",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "rest": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "tuple",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Tuple > 정의한 파라미터 타입 체크 1`] = `"tuple"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Union > parameters 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Union > typeParameters 반영 확인 1`] = `
[
  "T",
]
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Union > 정의한 파라미터 반영 확인 1`] = `
ZodUnion {
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "check": [Function],
  "clone": [Function],
  "decode": [Function],
  "decodeAsync": [Function],
  "def": {
    "options": [
      ZodLiteral {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "literal",
          "values": [
            "a",
          ],
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "literal",
        "values": Set {
          "a",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      ZodLiteral {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "literal",
          "values": [
            "b",
          ],
        },
        "default": [Function],
        "describe": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "meta": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "type": "literal",
        "values": Set {
          "b",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    ],
    "type": "union",
  },
  "default": [Function],
  "describe": [Function],
  "encode": [Function],
  "encodeAsync": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "meta": [Function],
  "nonoptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "options": [
    ZodLiteral {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "clone": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "literal",
        "values": [
          "a",
        ],
      },
      "default": [Function],
      "describe": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "type": "literal",
      "values": Set {
        "a",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    ZodLiteral {
      "and": [Function],
      "array": [Function],
      "brand": [Function],
      "catch": [Function],
      "check": [Function],
      "clone": [Function],
      "decode": [Function],
      "decodeAsync": [Function],
      "def": {
        "type": "literal",
        "values": [
          "b",
        ],
      },
      "default": [Function],
      "describe": [Function],
      "encode": [Function],
      "encodeAsync": [Function],
      "isNullable": [Function],
      "isOptional": [Function],
      "meta": [Function],
      "nonoptional": [Function],
      "nullable": [Function],
      "nullish": [Function],
      "optional": [Function],
      "or": [Function],
      "overwrite": [Function],
      "parse": [Function],
      "parseAsync": [Function],
      "pipe": [Function],
      "prefault": [Function],
      "readonly": [Function],
      "refine": [Function],
      "register": [Function],
      "safeDecode": [Function],
      "safeDecodeAsync": [Function],
      "safeEncode": [Function],
      "safeEncodeAsync": [Function],
      "safeParse": [Function],
      "safeParseAsync": [Function],
      "spa": [Function],
      "superRefine": [Function],
      "transform": [Function],
      "type": "literal",
      "values": Set {
        "b",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
  ],
  "or": [Function],
  "overwrite": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "prefault": [Function],
  "readonly": [Function],
  "refine": [Function],
  "register": [Function],
  "safeDecode": [Function],
  "safeDecodeAsync": [Function],
  "safeEncode": [Function],
  "safeEncodeAsync": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
  "type": "union",
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`code-converters > getZodObjectFromApi > Generic 타입 파라미터 > Generic Union > 타입파라미터 타입 체크 1`] = `"union"`;

exports[`code-converters > getZodObjectFromApi > Reference 처리 > 다중 reference 의존성 (체인) > A 구조 1`] = `
"z.object({
a: z.string(),
})"
`;

exports[`code-converters > getZodObjectFromApi > Reference 처리 > 다중 reference 의존성 (체인) > B 구조 1`] = `
"z.intersection(z.object({
a: z.string(),
}), z.object({
b: z.string(),
}))"
`;

exports[`code-converters > getZodObjectFromApi > Reference 처리 > 다중 reference 의존성 (체인) > C 구조 1`] = `
"z.intersection(z.intersection(z.object({
a: z.string(),
}), z.object({
b: z.string(),
})), z.object({
c: z.string(),
}))"
`;

exports[`code-converters > getZodObjectFromApi > Reference 처리 > 다중 reference 의존성 (체인) > 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Reference 처리 > 다중 reference 의존성 > 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Reference 처리 > 존재하지 않는 reference ID -> z.string() 폴백 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > Reference 처리 > 존재하지 않는 reference ID -> z.string() 폴백 > 반영 확인 1`] = `"error"`;

exports[`code-converters > getZodObjectFromApi > Reference 처리 > 존재하지 않는 reference ID -> z.string() 폴백 > 정의한 파라미터 타입 체크 1`] = `"string"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > array 파라미터 > parameters 반영 확인 1`] = `"{"success":true,"data":{}}"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > array 파라미터 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > 기본 API > array 파라미터 > 정의한 파라미터 타입 1`] = `"array"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > array 파라미터 > 타입파라미터 타입 체크 1`] = `"optional"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > boolean 파라미터 > parameters 반영 확인 1`] = `"{"success":true,"data":{}}"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > boolean 파라미터 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > 기본 API > boolean 파라미터 > 정의한 파라미터 타입 1`] = `"boolean"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > boolean 파라미터 > 타입파라미터 타입 체크 1`] = `"optional"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > number 파라미터 > parameters 반영 확인 1`] = `"{"success":true,"data":{}}"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > number 파라미터 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > 기본 API > number 파라미터 > 정의한 파라미터 타입 1`] = `"number"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > number 파라미터 > 타입파라미터 타입 체크 1`] = `"optional"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > string 파라미터 > parameters 반영 확인 1`] = `"{"success":true,"data":{}}"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > string 파라미터 > typeParameters 반영 확인 1`] = `[]`;

exports[`code-converters > getZodObjectFromApi > 기본 API > string 파라미터 > 정의한 파라미터 타입 1`] = `"string"`;

exports[`code-converters > getZodObjectFromApi > 기본 API > string 파라미터 > 타입파라미터 타입 체크 1`] = `"optional"`;

exports[`code-converters > getZodObjectFromApi > 순환참조 처리 > Intersection + 순환 > Node Zod 코드 1`] = `
"z.intersection(z.object({
value: z.string(),
}), z.object({
next: z.string().optional(),
}))"
`;

exports[`code-converters > getZodObjectFromApi > 순환참조 처리 > Pick/Omit + 순환 > User Zod 코드 1`] = `
"z.object({
id: z.number(),
name: z.string(),
email: z.string(),
friend: z.string().optional(),
})"
`;

exports[`code-converters > getZodObjectFromApi > 순환참조 처리 > 재귀적 Union (JasonValue-like Union) > JsonValue Zod 코드 1`] = `"z.union([z.string(),z.number(),z.boolean(),z.unknown(),z.array(z.string())])"`;

exports[`code-converters > getZodObjectFromApi > 순환참조 처리 > 재귀적 배열 구조 (Tree-like Array) > TreeNode Zod 코드 1`] = `
"z.object({
value: z.string(),
children: z.array(z.string()),
})"
`;
